hellosign-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hellosign-api-dep
spec:
  selector:
    matchLabels:
      app: hellosign-api-pod
  replicas: 2
  template:
    metadata:
      labels:
        app: hellosign-api-pod
    spec:
      containers:
      - name: hello-pod
        image: gcr.io/dealwire-dev-studio-001/hellosign-api
        ports:
        - containerPort: 80
