hello-svc.yml
# Hello Application ClusterIP
apiVersion: v1
kind: Service
metadata:
    name: hello-svc
spec:
    type: ClusterIP
    selector:
        app: hello
    ports:
        - protocol: TCP
        port: 9080
        targetPort: 80
