hellosign-svc.yml
# Hello Application ClusterIP
apiVersion: v1
kind: Service
metadata:
    name: hellosign-api-svc
spec:
    type: LoadBalancer
    selector:
        app: hellosign-api-pod
    ports:
      - protocol: TCP
        port: 80
        targetPort: 80
