services.yml
# This is a test manifest.
apiVersion: v1
kind: Service
metadata:
    name: hello-svc
    selector:
        matchLabel:
            run: hello
