Ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: gke-Ingress
#   annotations:
#     networking.gke.io/v1beta1.FrontendConfig: "frontendconfig"
#     # static-ip: xx.xx.xx.xx
spec:
    rules:
        - host: foo.bar.com
          http:
            paths:
            - path: /myapp
              pathType: Prefix
              backend:
                service:
                  name: hello-svc
                  port:
                    number: 9080

---
# apiVersion: networking.gke.io/v1beta1
# kind: FrontendConfig
# metadata:
#     name: my-frontend-config
# spec:
#     sslPolicy: gke-ingress-ssl-policy
